added ERROR page

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,10 @@ body {
 .poppins {
   font-family: "Poppins", sans-serif;
 }
+
+@layer base {
+  html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 6rem;
+  }
+}
